<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_diners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gen_margin"
        android:layout_marginEnd="@dimen/gen_margin"
        android:text="@string/lbl_diners"
        app:layout_constraintEnd_toEndOf="@+id/txt_diners"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_diners"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_diners" />

    <TextView
        android:id="@+id/lbl_per_diner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gen_margin"
        android:layout_marginEnd="@dimen/gen_margin"
        android:text="@string/lbl_perdiner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/icon_for_lbl_perdiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/gen_margin"
        android:drawableEnd="@drawable/ic_euro_symbol_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_per_diner" />

    <EditText
        android:id="@+id/txt_per_diner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gen_margin"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/icon_for_lbl_perdiner"
        app:layout_constraintStart_toEndOf="@+id/txt_diners"
        app:layout_constraintTop_toBottomOf="@+id/lbl_per_diner" />

    <TextView
        android:id="@+id/lbl_rounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gen_margin"
        android:layout_marginEnd="@dimen/gen_margin"
        android:text="@string/lbl_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_per_diner" />

    <TextView
        android:id="@+id/icon_for_lbl_rounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/gen_margin"
        android:drawableEnd="@drawable/ic_euro_symbol_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_rounded" />

    <EditText
        android:id="@+id/txt_rounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/gen_margin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/icon_for_lbl_rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_diners" />

    <Button
        android:id="@+id/btn_reset_diners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gen_margin"
        android:layout_marginEnd="@dimen/gen_margin"
        android:text="@string/string_btn_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_rounded" />
</androidx.constraintlayout.widget.ConstraintLayout>